--- a/CapaPresentacion/frmActiculos.resx
+++ b/CapaPresentacion/frmActiculos.resx
@@ -181,10 +181,22 @@
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>25</value>
   </metadata>
+  <data name="btnInicioLista.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAATr0AAE69AFFT5SzAAABIElE
+        QVRYR+2VQWoCQRBFZ6Mm4DpLL5ArZeNGkqzcCQoBRW8QvELO4QkCuYGeIRhxof4H3dAUIz2amRahPzws
+        q6v6fxRmiqx7V8txEz2KqfhwdVI9iLnYOQhCL4m8+Z84OqiThLDme0eSENZ8K/j/MaVuNIQ153MiOg6C
+        hGe1hjhnHhpQNxKiirlX7SEuMfeqLYQ1/xUj0RYxMTMW7FwVwprDtxiKV/EunoUVPc6YYfZH+P3KIcrM
+        4WC+vwkreuGM3YmG4Hm+EDxaw8UyqgQog7tnovTd8ST6gp+Ry0IG4kv4i+hZ0fPnzLIT3gHcjQdeFys0
+        oLaKnf9bOUAOkAOEBivxKZYOanrJAsRoJMCL2Ih1BGaYrV1d0asIs1n3oKI4Aezpwlcl9GoFAAAAAElF
+        TkSuQmCC
+</value>
+  </data>
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wQAADsEBuJFr7QAAArxJREFUaEPtmT2O1EAQRk0AGVeAFZwCbkGIBHdYSAiRkAjgIByACCJuwYaA4AQE
+        vgAADr4B6kKxwAAAArxJREFUaEPtmT2O1EAQRk0AGVeAFZwCbkGIBHdYSAiRkAjgIByACCJuwYaA4AQE
         CPFfb3CNvukpj8vebs8EftKnsburyl3e7nLb2x3ghelb/9uC1vG7H6a//W8LWsfv/pi4AGpB6/hrAmOs
         CThXTI9Mn0wEfWqC8gK003ZZjcVnHIyHcaU4N2mwZyYoqwTtbnMZZeIzHsaV4oPJHdFrE3idfrk5+9+u
         dnOVjf/RlOK3SR05v2dSOP9lUru5ysbHLoU6qTN35Hn/W2vwrmz8FJHjqShF5HgqShE5nopSRI6nohST
